Add more models

--- a/PlantINaturalist2021_training.ipynb
+++ b/PlantINaturalist2021_training.ipynb
@@ -13,26 +13,44 @@
     "import copy\n",
     "import pytorch_lightning as pl\n",
     "import torchinfo\n",
-    "import torchvision.transforms as transforms\n",
     "\n",
-    "from PlantINaturalist2021DataModule import PlantINaturalist2021DataModule\n",
-    "from PlantINaturalist2021FinetuneMobileNetv2 import PlantINaturalist2021FinetuneMobileNetv2, TRANSFORM2\n",
+    "from PlantINaturalist2021DataModule import PlantINaturalist2021DataModule as imported_datamodule\n",
+    "from PlantINaturalist2021FineTuneDensenet201 import PlantINaturalist2021FineTuneDensenet201 as imported_model\n",
+    "from image_transformers import transform_autoaugment as imported_transform\n",
     "\n",
     "config = {\n",
-    "    \"model_name\": PlantINaturalist2021FinetuneMobileNetv2.__name__,\n",
+    "    \"model_name\": imported_model.__name__,\n",
     "    \"num_classes\": 250,\n",
     "    \"learning_rate\": 0.01,\n",
     "    \"lr_decay_epoch_step_size\": 5,\n",
     "    \"lr_decay_rate\": 0.9,\n",
-    "    \"num_trainable_layers\": 2,\n",
-    "}\n",
+    "    \"num_trainable_layers\": 3,\n",
+    "    \"transform\": imported_transform.__name__,\n",
+    "    \"batch_size\": 64\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# sanity run\n",
-    "pl.Trainer(max_steps=5).fit(model=PlantINaturalist2021FinetuneMobileNetv2(config), datamodule=PlantINaturalist2021DataModule(transform=TRANSFORM2, context = \"retrain\"))\n",
+    "pl.Trainer(max_steps=5).fit(model=imported_model(config), datamodule=imported_datamodule(transform=imported_transform.get(), context = \"retrain\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get model and datamodule and module summary\n",
+    "model = imported_model(config)\n",
     "\n",
-    "model = PlantINaturalist2021FinetuneMobileNetv2(config)\n",
-    "\n",
-    "datamodule = PlantINaturalist2021DataModule(transform=TRANSFORM2, context=\"train\", batch_size=32, num_workers=2, pin_memory=True, data_dir=\"./\")\n",
+    "datamodule = imported_datamodule(transform=imported_transform.get(), context=\"train\", batch_size=64, num_workers=2, pin_memory=True, data_dir=\"./\")\n",
     "\n",
     "torchinfo.summary(model)"
    ]
@@ -43,12 +61,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import wandb\n",
-    "import torch\n",
-    "from pytorch_lightning.loggers import WandbLogger\n",
+    "# adjust datamodule config\n",
+    "datamodule = imported_datamodule(transform=imported_transform.get(), context=\"train\", batch_size=64, num_workers=2, pin_memory=True, data_dir=\"./\")\n",
     "\n",
+    "trainer = pl.Trainer(benchmark=True, max_time=\"00:00:03:00\", accelerator='gpu', devices=1)\n",
     "\n",
-    "run = wandb.init(project='PlantINaturalist', config=config)\n"
+    "trainer.fit(model=model, datamodule=datamodule)"
    ]
   },
   {
@@ -57,9 +75,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# more model info\n",
+    "torchinfo.summary(model, verbose = 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# initiate run\n",
+    "import wandb\n",
+    "import torch\n",
+    "from pytorch_lightning.loggers import WandbLogger\n",
     "\n",
+    "\n",
+    "run = wandb.init(project='PlantINaturalist2', config=config)\n",
+    "\n",
+    "wandb.save(f\"{imported_model.__name__}.py\")\n",
+    "wandb.save(f\"{imported_datamodule.__name__}.py\")\n",
+    "wandb.save(\"image_transformers.py\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train model\n",
     "wandb_logger = WandbLogger()\n",
-    "trainer = pl.Trainer(benchmark=True, logger=wandb_logger, max_epochs=35, accelerator='gpu', devices=1)\n",
+    "trainer = pl.Trainer(benchmark=True, logger=wandb_logger, max_time=\"00:02:00:00\", accelerator='gpu', devices=1)\n",
     "\n",
     "trainer.fit(model=model, datamodule=datamodule)"
    ]
@@ -72,6 +119,7 @@
    },
    "outputs": [],
    "source": [
+    "# save model as artifact to wandb\n",
     "torch.save(model.state_dict(), 'model.pth')\n",
     "artifact = wandb.Artifact('model', type='model')\n",
     "artifact.add_file('model.pth')\n",
@@ -86,7 +134,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# check parameters\n",
     "next(model.model.classifier.parameters())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finetune and retrain"
    ]
   },
   {
@@ -106,7 +163,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_artifact = PlantINaturalist2021FinetuneMobileNetv2(config)\n",
+    "from PlantINaturalist2021DataModule import PlantINaturalist2021DataModule as imported_datamodule\n",
+    "from PlantINaturalist2021FinetuneMobileNetv2 import PlantINaturalist2021FinetuneMobileNetv2 as imported_model\n",
+    "from image_transformers import transform_autoaugment as imported_transform\n",
+    "\n",
+    "config = {\n",
+    "    \"model_name\": imported_model.__name__,\n",
+    "    \"num_classes\": 250,\n",
+    "    \"learning_rate\": 0.01,\n",
+    "    \"lr_decay_epoch_step_size\": 5,\n",
+    "    \"lr_decay_rate\": 0.9,\n",
+    "    \"num_trainable_layers\": 2,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_artifact = imported_model(config)\n",
     "model_artifact.load_state_dict(torch.load(f\"{artifact_dir}/model.pth\"))"
    ]
   },
@@ -118,13 +195,13 @@
    "source": [
     "#FINETUNE\n",
     "wandb_logger = WandbLogger()\n",
-    "model_finetune = PlantINaturalist2021FinetuneMobileNetv2(config)\n",
+    "model_finetune = imported_model(config)\n",
     "print(next(model_finetune.model.classifier.parameters())[:2])\n",
     "model_finetune.load_state_dict(torch.load(f\"{artifact_dir}/model.pth\"))\n",
     "print(next(model_finetune.model.classifier.parameters())[:2])\n",
     "model_finetune.learning_rate = 0.001\n",
     "model_finetune.configure_optimizers()\n",
-    "datamodule_finetune = PlantINaturalist2021DataModule(transform=TRANSFORM2, context=\"finetune\", batch_size=32, num_workers=1, pin_memory=True, data_dir=\"./\")\n",
+    "datamodule_finetune = imported_datamodule(transform=imported_transform.get(), context=\"finetune\", batch_size=32, num_workers=1, pin_memory=True, data_dir=\"./\")\n",
     "trainer = pl.Trainer(benchmark=True, logger=wandb_logger, max_epochs = 20, accelerator='gpu', devices=1)\n",
     "trainer.fit(model=model_finetune, datamodule=datamodule_finetune)\n",
     "torch.save(model_finetune.state_dict(), 'finetuned_model.pth')\n",
@@ -142,12 +219,12 @@
    "source": [
     "#FINETUNE 2\n",
     "wandb_logger = WandbLogger()\n",
-    "model_finetune = PlantINaturalist2021FinetuneMobileNetv2(config)\n",
+    "model_finetune = imported_model(config)\n",
     "print(next(model_finetune.model.classifier.parameters())[:2])\n",
     "model_finetune.load_state_dict(torch.load(f\"{artifact_dir}/model.pth\"))\n",
     "print(next(model_finetune.model.classifier.parameters())[:2])\n",
     "model_finetune.configure_optimizers()\n",
-    "datamodule_finetune = PlantINaturalist2021DataModule(transform=TRANSFORM2, context=\"retrain\", batch_size=32, num_workers=1, pin_memory=True, data_dir=\"./\")\n",
+    "datamodule_finetune = imported_datamodule(transform=imported_transform.get(), context=\"retrain\", batch_size=32, num_workers=1, pin_memory=True, data_dir=\"./\")\n",
     "trainer = pl.Trainer(benchmark=True, logger=wandb_logger, max_epochs = 10, accelerator='gpu', devices=1)\n",
     "trainer.fit(model=model_finetune, datamodule=datamodule_finetune)\n",
     "torch.save(model_finetune.state_dict(), 'finetuned_model2.pth')\n",
@@ -167,8 +244,8 @@
     "wandb.finish()\n",
     "run = wandb.init()\n",
     "wandb_logger = WandbLogger()\n",
-    "model_retrain = PlantINaturalist2021FinetuneMobileNetv2(config)\n",
-    "datamodule_retrain = PlantINaturalist2021DataModule(transform=TRANSFORM2, context=\"retrain\", batch_size=32, num_workers=1, pin_memory=True, data_dir=\"./\")\n",
+    "model_retrain = imported_model(config)\n",
+    "datamodule_retrain = imported_datamodule(transform=imported_transform.get(), context=\"retrain\", batch_size=32, num_workers=1, pin_memory=True, data_dir=\"./\")\n",
     "trainer = pl.Trainer(benchmark=True, logger=wandb_logger, max_epochs = 40, accelerator='gpu', devices=1)\n",
     "trainer.fit(model=model_retrain, datamodule=datamodule_retrain)\n",
     "torch.save(model_retrain.state_dict(), 'retrained_model.pth')\n",
@@ -186,18 +263,11 @@
    "source": [
     "next(model_artifact.model.classifier.parameters())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "test-pytorch",
    "language": "python",
    "name": "python3"
   },
@@ -211,11 +281,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8 (default, Apr 13 2021, 15:08:03) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
-    "hash": "a04f5d07b0747026a8fbcdf50b9443318e69b1b8bd6247d88bfadb4789282972"
+    "hash": "8ddb299a13d2af08c67c36ca20e80947019e09e59494d2443849c5940fcefaa3"
    }
   }
  },
